<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/resultTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/resultTxt1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/question1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/resultTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTxt"
        app:layout_constraintVertical_bias="0.100" />

    <TextView
        android:id="@+id/resultTxt2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/question2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/resultTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTxt1"
        app:layout_constraintVertical_bias="0.100"/>

    <TextView
        android:id="@+id/resultTxt3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/question3"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/resultTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTxt2"
        app:layout_constraintVertical_bias="0.100" />

    <TextView
        android:id="@+id/resultTxt4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/question4"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/resultTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTxt3"
        app:layout_constraintVertical_bias="0.100"/>

    <TextView
        android:id="@+id/resultTxt5"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/question5"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/resultTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTxt4"
        app:layout_constraintVertical_bias="0.100"/>

    <TextView
        android:id="@+id/resultTxt11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/resultTxt1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/resultTxt1"
        app:layout_constraintTop_toTopOf="@+id/resultTxt1" />

    <TextView
        android:id="@+id/resultTxt12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/resultTxt2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/resultTxt2"
        app:layout_constraintTop_toTopOf="@+id/resultTxt2" />

    <TextView
        android:id="@+id/resultTxt13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/resultTxt3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/resultTxt3"
        app:layout_constraintTop_toTopOf="@+id/resultTxt3" />

    <TextView
        android:id="@+id/resultTxt14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/resultTxt4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/resultTxt4"
        app:layout_constraintTop_toTopOf="@+id/resultTxt4" />

    <TextView
        android:id="@+id/resultTxt15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="@+id/resultTxt5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/resultTxt5"
        app:layout_constraintTop_toTopOf="@+id/resultTxt5" />

</android.support.constraint.ConstraintLayout>